hphp/hack/test/typecheck/is_vec_or_varray/is_dict_or_darray.php.exp
File "is_dict_or_darray.php", line 11, characters 15-16:
Invalid argument (Typing[4110])
  File "is_dict_or_darray.php", line 21, characters 20-29:
  Expected `vec<mixed>`
  File "is_dict_or_darray.php", line 4, characters 7-26:
  But got `dict<(string | Tk#1), (string | T#1)>` from the argument to this \HH\is_dict_or_darray test
File "is_dict_or_darray.php", line 13, characters 18-19:
Invalid argument (Typing[4110])
  File "is_dict_or_darray.php", line 23, characters 23-35:
  Expected `vec<mixed>`
  File "is_dict_or_darray.php", line 4, characters 7-26:
  But got `dict<(string | Tk#1), (string | T#1)>` from the argument to this \HH\is_dict_or_darray test
File "is_dict_or_darray.php", line 16, characters 5-17:
This is not an object of type `KeyedContainer`, this is a mixed value (Typing[4370])
  File "is_dict_or_darray.php", line 3, characters 15-19:
  Definition is here
